--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "code-monk08",
   "license": "MIT",
   "dependencies": {
-    "mongo": "^0.1.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.7.9"
   }
 }
