--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongo": "^0.1.0",
-    "mongoose": "^5.7.9"
+    "mongoose": "^5.7.9",
+    "nodemon": "^1.19.4"
   }
 }
